# Recall

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.claude/: settings.json
backend/: .env.example  _clear_context_fts.py  alembic.ini  env_for_codeagent  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  dependencies.py  documents.py  generate.py  router.py  search.py  topology.py
backend/app/cli/: __main__.py  _init_deps.py  annotate.py  contextualize.py  docs.py  eval.py  generate.py  ingest.py  reindex.py  retag.py  search.py
backend/app/core/: chunk_manager.py  database.py  exceptions.py  models.py  pipeline_deps.py  repository.py  schemas.py  vectordb.py
backend/app/evaluation/: metrics.py  runner.py  sampler.py  schemas.py  synthesizer.py
backend/app/generation/: generator.py
backend/app/ingestion/: __init__.py  chunker.py  content_filter.py  contextualizer.py  embedder.py  parser.py  pipeline.py  tagger.py
backend/app/ingestion/parsers/: pdf.py  pdf_mineru.py  pdf_pymupdf.py  text.py
backend/app/mcp/: __init__.py  __main__.py  server.py
backend/app/refiner/: __init__.py
backend/app/retrieval/: __init__.py  configs.py  engine.py  graph.py  merger.py  operators.py  pipeline.py  query_transform.py  registry.py  reranker.py  scoring.py  searcher.py  topology.py  workflows.py
backend/app/services/: __init__.py  document_service.py  generation_service.py  ingestion_service.py  reindex_service.py  search_service.py
backend/migrations/: env.py
backend/scripts/: clear_data.py  generate_rewrite_dataset.py  sft-lora.py
backend/tests/test_sqalchemy_conn/: conftest.py  test_database.py
docs/: backlog.md  dag_operator_refactor.md  db_shcema.txt  design.md  design_format.md  list_of_references.md  new_topology_guide.md  new_topology_guide_en.md  query_transform_design.md  recall-sprint-plan.md  rejected_designs.md
frontend/: CLAUDE.md  package-lock.json  (+2 more)
(+33 files in other folders)
